--- a/README
+++ b/README
@@ -3,9 +3,26 @@ IIS Module for CloudFlare users, similar to mod_cloudflare.c for Apache
 --Restore Visitors IPs to web applications running on IIS.
 --Adds visitor IP to logs
 
-Tested with IIS 7, 7.5 and 8. Known to compile from .NET 2.0 or later.
+Tested with IIS 7, 7.5 and 8. Known to compile using .NET 2.0 or later.
 
 Uses the IPNetwork library by Luke Skywaler: ipnetwork.codeplex.com
+
+==Rough installation instruction==
+
+1.) Compile, if needed.
+2.) Copy .dll files to the BIN folder in the root of your desired application/website folder. If this folder doesn't exist, then create it.
+3.) In the IIS Manager, go to the website/application's "Modules" section.
+4.) Right click, or use the interface to "Add Managed Module"
+5.) Use "ModCloudFlare" as the name. (This is actually arbitrary.)
+6.) For "Type" simply type in ModCloudFlareIIS.ModCloudFlare. (This should autocomplete.)
+7.) Leave the checkbox alone.
+8.) Press "OK."
+9.) Restart the Website/Application, if necessary.
+
+==Potential issues==
+
+--This module is likely far from complete and may not cover all methods of retrieving a visitor's IP using ServerVariables
+--IPv4 only, for now.
 
 Copyright (c) 2009, Luke Skywalker
 All rights reserved.
