--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 IIS Module for CloudFlare users, similar to mod_cloudflare.c for Apache
 
---Restore Visitors IPs to web applications running on IIS.
---Adds visitor IP to logs
+--Restores original visitor IP address to web applications running on IIS and using CloudFlare's performance and security service.
+--Adds original visitor IP address to logs
 
 Tested with IIS 7, 7.5 and 8. Known to compile using .NET 2.0 or later.
 
+More background on [seeing the original visitor IP address in logs when using CloudFlare](https://support.cloudflare.com/entries/22055137-why-do-my-server-logs-show-cloudflare-s-ips-using-cloudflare). More about [CloudFlare](https://www.cloudflare.com)
 
 ==Rough installation instruction==
 
